<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.extraInfo.FillExtraInformationActivity">

    <EditText
        android:id="@+id/editTextNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonApplyNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNickName"

        android:text="@string/continue_text"
        android:textColor="@color/purple_700"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:id="@+id/buttonExitAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_account_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>